2007-02-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_save_image):
	let the return value indicate whether the file has been saved.
	(file_save_dialog_response): only hide the dialog after the image
	has been saved.

2007-02-05  Sven Neumann  <sven@gimp.org>

	* gimpui.pc.in (Requires): require gimp-2.0 >= $GIMP_APP_VERSION.

2007-02-05  Sven Neumann  <sven@gimp.org>

	* gimp.pc.in (Requires)
	* gimpui.pc.in (Requires): substitute minimum required versions of
	glib and gtk+ instead of hardcoding them.

2007-02-03  Michael Natterer  <mitch@gimp.org>

	Remove support for the old undo pop and free cruft:

	* app/core/core-types.h: remove typedefs GimpUndoPopFunc and
	GimpUndoFreeFunc.

	* app/core/gimpundo.[ch]: remove members and properties size,
	data, pop_func and free_func.

	* app/core/gimpimage-undo.[ch] (gimp_image_undo_push): remove
	parameters size, struct_size, pop_func and free_func.

	* app/core/gimpimage-undo-push.c
	* app/tools/gimptransformtool.c
	* app/paint/gimpink.c
	* app/paint/gimppaintcore.c: change calls to above function
	accordingly.

2007-02-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpfloatingselundo.[ch]: implement GIMP_UNDO_FS_TO_LAYER.

	* app/core/gimpimage-undo-push.c: use it. Also changed
	gimp_image_undo_push_cantundo() to not pass a pop function to
	gimp_image_undo_push().

2007-02-03  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpforegroundselecttool-undo.[ch]
	* app/tools/gimptransformtool-undo.[ch]: removed...

	* app/tools/Makefile.am
	* app/tools/tools-types.h
	* app/tools/gimpforegroundselecttoolundo.[ch]
	* app/tools/gimptransformtoolundo.[ch]: ...and added a proper undo
	classes.

	* app/tools/gimptransformtool.c: push undos using the new class.

2007-02-03  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppaintcore-undo.[ch]
	* app/paint/gimpink-undo.[ch]: removed...

	* app/paint/Makefile.am
	* app/paint/paint-types.h
	* app/paint/gimppaintcoreundo.[ch]